--- a/SocialFashion.Model/App.Config
+++ b/SocialFashion.Model/App.Config
@@ -1,13 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="SocialFashionDbContext" connectionString="metadata=res://*/Models.SocialDbContext.csdl|res://*/Models.SocialDbContext.ssdl|res://*/Models.SocialDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAITHANHDAT\SQLEXPRESS;initial catalog=SocialFashion;persist security info=True;user id=sa;password=1234567;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
-  </connectionStrings>
+    
+  <add name="SocialFashionDbContext" connectionString="metadata=res://*/Models.SocialFashionDbContext.csdl|res://*/Models.SocialFashionDbContext.ssdl|res://*/Models.SocialFashionDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAITHANHDAT\SQLEXPRESS;initial catalog=SocialFashion;user id=sa;password=1234567;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
   </entityFramework>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+</configuration>
