The Last commit

--- a/SocialFashion.Model/App.Config
+++ b/SocialFashion.Model/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     
-  <add name="SocialFashionDbContext" connectionString="metadata=res://*/Models.SocialFashionDbContext.csdl|res://*/Models.SocialFashionDbContext.ssdl|res://*/Models.SocialFashionDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAITHANHDAT\SQLEXPRESS;initial catalog=SocialFashion;user id=sa;password=1234567;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="SocialFashionDbContext" connectionString="metadata=res://*/Models.SocialFashionDbContext.csdl|res://*/Models.SocialFashionDbContext.ssdl|res://*/Models.SocialFashionDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAITHANHDAT\SQLEXPRESS;initial catalog=SocialFashion;user id=sa;password=1234567;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
