--- a/SocialFashion.Web/Web.config
+++ b/SocialFashion.Web/Web.config
@@ -9,8 +9,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SocialFashionDbContext" connectionString="metadata=res://*/Models.SocialDbContext.csdl|res://*/Models.SocialDbContext.ssdl|res://*/Models.SocialDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAITHANHDAT\SQLEXPRESS;initial catalog=SocialFashion;persist security info=True;user id=sa;password=1234567;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SocialFashion.Web-20161202090213.mdf;Initial Catalog=aspnet-SocialFashion.Web-20161202090213;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="SocialFashionDbContext" connectionString="metadata=res://*/Models.SocialFashionDbContext.csdl|res://*/Models.SocialFashionDbContext.ssdl|res://*/Models.SocialFashionDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAITHANHDAT\SQLEXPRESS;initial catalog=SocialFashion;user id=sa;password=1234567;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DefaultConnection" connectionString="Data Source=MAITHANHDAT\SQLEXPRESS;Initial Catalog=SocialFashion;user id=sa;password=1234567;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
