--- a/SocialFashion.Web/SocialFashion.Web.csproj
+++ b/SocialFashion.Web/SocialFashion.Web.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Controllers\DefaultController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\StatusController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
